{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 17,
  "lineage": "f4400661-d6f5-0331-656a-a9327c32d0e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Eng67_Daniel_EC2_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087fd8ad2539f981d",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0da46861a0b713dd2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da46861a0b713dd2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsStudents",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b36866d11fd58e88",
            "private_dns": "ip-10-20-1-185.eu-west-1.compute.internal",
            "private_ip": "10.20.1.185",
            "public_dns": "ec2-52-210-166-199.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.210.166.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fa7d1a3130da149a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1dc589b2ff9271f",
            "tags": {
              "Name": "eng67.Daniel.Terraform.EC2.App"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03fc4802e230898d3"
            ]
          },
          "dependencies": [
            "aws_security_group.Eng67_Daniel_SG_Terraform",
            "aws_subnet.Eng67_Daniel_Public_Subnet_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Eng67_Daniel_IGW_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0b7afc418933ca49e",
            "id": "igw-0b7afc418933ca49e",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67_Daniel_IGW_Terraform"
            },
            "vpc_id": "vpc-001ca09552274b39f"
          },
          "dependencies": [
            "aws_vpc.Eng67_Daniel_VPC_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Eng67_Daniel_RouteTable_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09a0ba1c3f74a8e0e",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7afc418933ca49e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng67_Daniel_RouteTable_Terraform"
            },
            "vpc_id": "vpc-001ca09552274b39f"
          },
          "dependencies": [
            "aws_internet_gateway.Eng67_Daniel_IGW_Terraform",
            "aws_vpc.Eng67_Daniel_VPC_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Eng67_Daniel_Subnetlink_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080eaf6d9c63f654b",
            "route_table_id": "rtb-09a0ba1c3f74a8e0e",
            "subnet_id": "subnet-0e1dc589b2ff9271f"
          },
          "dependencies": [
            "aws_route_table.Eng67_Daniel_RouteTable_Terraform",
            "aws_subnet.Eng67_Daniel_Public_Subnet_Terraform",
            "aws_vpc.Eng67_Daniel_VPC_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Eng67_Daniel_SG_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-03fc4802e230898d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fc4802e230898d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.234.30.225/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200824124307200600000001",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng67_Daniel_SG_Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ca09552274b39f"
          },
          "dependencies": [
            "aws_vpc.Eng67_Daniel_VPC_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Eng67_Daniel_Private_Subnet_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0ce38793864b741bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0ce38793864b741bd",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67_Daniel_Private_Subnet_Terraform"
            },
            "vpc_id": "vpc-001ca09552274b39f"
          },
          "dependencies": [
            "aws_vpc.Eng67_Daniel_VPC_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Eng67_Daniel_Public_Subnet_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0e1dc589b2ff9271f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0e1dc589b2ff9271f",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67_Daniel_Public_Subnet_Terraform"
            },
            "vpc_id": "vpc-001ca09552274b39f"
          },
          "dependencies": [
            "aws_vpc.Eng67_Daniel_VPC_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Eng67_Daniel_VPC_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-001ca09552274b39f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-06be9feba0a0d5113",
            "default_route_table_id": "rtb-02d7ec505917927e4",
            "default_security_group_id": "sg-09f7e61d59b82c839",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-001ca09552274b39f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02d7ec505917927e4",
            "owner_id": "135928476890"
          }
        }
      ]
    }
  ]
}